# eigen-quadprog

./: CMakeLists.txt  README.md  package.xml
include/eigen-quadprog/: QuadProg.h
src/: QuadProg.cpp
test/: QPTest.cpp  main.cpp
